--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,8 +28,10 @@
 
     // Use 'forwardPorts' to make a list of ports inside the container available locally.
     // "forwardPorts": [],
+
     // Uncomment the next line to run commands after the container is created - for example installing curl.
-    // "postCreateCommand": "apt-get update && apt-get install -y curl",
+    "postCreateCommand": "arduino-cli lib install \"Adafruit SSD1306\"",
+
     // Uncomment when using a ptrace-based debugger like C++, Go, and Rust
     // "runArgs": [
     //     "--device=/dev/bus/usb/"
@@ -37,6 +39,7 @@
 
     // Uncomment to use the Docker CLI from inside the container. See https://aka.ms/vscode-remote/samples/docker-from-docker.
     // "mounts": [ "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind" ],
+
     // Uncomment to connect as a non-root user if you've added one. See https://aka.ms/vscode-remote/containers/non-root.
     "remoteUser": "maker"
 }
